add user likes api and documentation :fire:
